renamed some files. forming the service now

--- a/config/backup_database.ini
+++ b/config/backup_database.ini
@@ -3,14 +3,16 @@ supported_db_types = ['postgresql', 'mysql']
 
 
 [ucp-tts]
+backup = True
 db_type = postgresql
-db_host = mcp-tts-01
+db_host = mcp-tts-01.mcp.com
 db_name = tts
 db_user = postgres
 db_password =
 db_port = 5432
 
 [ucp-reviewboard]
+backup = True
 db_type = mysql
 db_host = mcp-mango-01
 db_name = reviewboard
@@ -19,6 +21,7 @@ db_password = p@ssword1
 db_port = 5432
 
 [wal-tts]
+backup = False
 db_type = postgresql
 db_host = tts.archivas.com
 db_name = tts
