--- a/config/logging.ini
+++ b/config/logging.ini
@@ -22,7 +22,7 @@ interval=midnight
 backupCount=5
 formatter=complex
 level=DEBUG
-args=('logs/database_tool.log',)
+args=('C:/logs/database_tool.log',)
 
 [handler_screen]
 class=StreamHandler
