Creating a cron runner for the Database backup service

--- a/config/backup_database.ini
+++ b/config/backup_database.ini
@@ -3,37 +3,45 @@ supported_db_types = ['postgresql', 'mysql']
 
 
 [ucp-tts]
-backup = True
+enabled = True
 db_type = postgresql
 db_host = mcp-tts-01.mcp.com
 db_name = tts
 db_user = postgres
-db_password =
+db_pass =
 db_port = 5432
+upload_url = https://archive.ucp.hcp.mcp.com/webdav/data/Daily%20Backups/TTS/
+upload_user = ucpadmin
+upload_pass = 534hawks
 
 [ucp-reviewboard]
-backup = True
+enabled = True
 db_type = mysql
 db_host = mcp-mango-01
 db_name = reviewboard
 db_user = root
-db_password = p@ssword1
-db_port = 5432
+db_pass = p@ssword1
+db_port = 3306
+upload_url = https://archive.ucp.hcp.mcp.com/webdav/data/Daily%20Backups/Reviewboard/
+upload_user = ucpadmin
+upload_pass = 534hawks
+
 
 [wal-tts]
-backup = False
+enabled = False
 db_type = postgresql
 db_host = tts.archivas.com
 db_name = tts
 db_user = postgres
-db_password =
+db_pass =
 db_port = 5432
 
 [wal-sprite]
+enabled = False
 db_type = postgresql
 db_host = pxe.archivas.com
 db_name = sprite
 db_user = postgres
-db_password =
+db_pass =
 db_port = 5432
 
