Added cron runner script for the bacup service. Cleaned up the uploading of files.

--- a/config/backup_database.ini
+++ b/config/backup_database.ini
@@ -11,7 +11,7 @@ db_user = postgres
 db_pass =
 db_port = 5432
 upload_url = https://archive.ucp.hcp.mcp.com/webdav/data/Daily%20Backups/TTS/
-upload_user = ucpadmin
+upload_user = ucpbackup
 upload_pass = 534hawks
 
 [ucp-reviewboard]
@@ -20,12 +20,11 @@ db_type = mysql
 db_host = mcp-mango-01
 db_name = reviewboard
 db_user = root
-db_pass = p@ssword1
+db_pass =
 db_port = 3306
 upload_url = https://archive.ucp.hcp.mcp.com/webdav/data/Daily%20Backups/Reviewboard/
-upload_user = ucpadmin
+upload_user = ucpbackup
 upload_pass = 534hawks
-
 
 [wal-tts]
 enabled = False
