Using the pkg API for setuptools and not using __file__ paths anymore.

--- a/config/logging.ini
+++ b/config/logging.ini
@@ -2,7 +2,7 @@
 keys=root
 
 [logger_root]
-handlers=file
+handlers=file,screen
 
 [formatters]
 keys=simple,complex
@@ -22,7 +22,7 @@ interval=midnight
 backupCount=5
 formatter=complex
 level=DEBUG
-args=('logs/database_tool.log',)
+args=('../logs/database_tool.log',)
 
 [handler_screen]
 class=StreamHandler
