Fixing the logging.

--- a/config/cron_logging.ini
+++ b/config/cron_logging.ini
@@ -1,31 +1,32 @@
 [loggers]
-keys=root
+keys = root
 
 [logger_root]
-handlers=file
+handlers = screen,file
 
 [formatters]
-keys=simple,complex
+keys = simple,complex
 
 [formatter_simple]
-format=%(asctime)s %(levelname)-6s %(message)s
+format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
 
 [formatter_complex]
-format=%(asctime)s %(levelname)-6s line %(lineno)-4s %(message)s
+format = %(asctime)s - %(name)s - %(levelname)s - %(module)s : %(lineno)d - %(message)s
 
 [handlers]
-keys=file,screen
+keys = file,screen
 
 [handler_file]
-class=handlers.TimedRotatingFileHandler
-interval=midnight
-backupCount=5
-formatter=complex
-level=DEBUG
-args=(os.path.expanduser('~') + '/.dbackups/logs/database_backup_cron.log',)
+class = handlers.TimedRotatingFileHandler
+interval = midnight
+backupCount = 5
+formatter = complex
+level = DEBUG
+args = (os.path.expanduser('~') + '/.dbackups/logs/database_backup_cron.log',)
+
 
 [handler_screen]
-class=StreamHandler
-formatter=simple
-level=INFO
-args=(sys.stdout,)
+class = StreamHandler
+formatter = simple
+level = INFO
+args = (sys.stdout,)
